Use .sty file, and minor changes

--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -118,7 +118,7 @@ The activity of single facets can also be studied with \textit{single crystals},
 
 \subsection{Linking strain and reactivity}
 
-A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000} for transition metals, which is at the origin of the strain-reactivity studies in the frame of this thesis.
+A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000, Norskov2009} for transition metals, which is at the origin of the strain-reactivity studies in the frame of this thesis.
 
 In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}.
 The study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions.
