--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -73,7 +73,7 @@ This arrangement can be described with the following matrix, $\alpha$-\ce{Al_2O_
         Epitaxial relationship between $\{111\}$ Pt planes and [0001]-oriented sapphire substrate.
     }
     \label{fig:Epitaxy}
-\end{figure}%
+\end{figure}
 
 Lattice strain in diffraction is usually defined as the difference between the reference and experimental lattice parameter values, respectively $a_{ref}$ and $a$ (eq. \ref{eq:StrainDiffraction}).
 
