--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,24 @@ volume = {90},
 year = {2002}
 }
 
+@Article{Norskov2009,
+author={N{\o}rskov, J. K.
+and Bligaard, T.
+and Rossmeisl, J.
+and Christensen, C. H.},
+title={Towards the computational design of solid catalysts},
+journal={Nature Chemistry},
+year={2009},
+month={Apr},
+day={01},
+volume={1},
+number={1},
+pages={37-46},
+abstract={Over the past decade the theoretical description of surface reactions has undergone a radical development. Advances in density functional theory mean it is now possible to describe catalytic reactions at surfaces with the detail and accuracy required for computational results to compare favourably with experiments. Theoretical methods can be used to describe surface chemical reactions in detail and to understand variations in catalytic activity from one catalyst to another. Here, we review the first steps towards using computational methods to design new catalysts. Examples include screening for catalysts with increased activity and catalysts with improved selectivity. We discuss how, in the future, such methods may be used to engineer the electronic structure of the active surface by changing its composition and structure.},
+issn={1755-4349},
+doi={10.1038/nchem.121},
+}
+
 @article{Leake2009,
 author = {Steven J. Leake and Marcus C. Newton and Ross Harder and Ian K. Robinson},
 journal = {Opt. Express},
