--- a/Sections/2eme_couverture.tex
+++ b/Sections/2eme_couverture.tex
@@ -1,8 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \Ifthispageodd{\newpage\thispagestyle{empty}\null\newpage}{}
 \thispagestyle{empty}
-% \newgeometry{top=1.5cm, bottom=1.25cm, left=2cm, right=2cm}
-% \fontfamily{rm}\selectfont
 
 \lhead{}
 \rhead{}
@@ -11,13 +8,8 @@
 \lfoot{}
 
 \noindent 
-%*****************************************************
-%***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
-%*****************************************************
 \includegraphics[height=2.4cm]{/home/david/Documents/PhD/Figures/Logos/logo_usp_PIF.png}
 \vspace{0.5cm}
-%*****************************************************
-%\fontfamily{cmss}\fontseries{m}\selectfont
 
 \small
 
@@ -57,8 +49,6 @@ La mesure de différents niveaux par spectroscopie photoélectronique à rayons 
 
 \newpage
 \thispagestyle{empty}
-% \newgeometry{top=1.5cm, bottom=1.25cm, left=2cm, right=2cm}
-% \fontfamily{rm}\selectfont
 
 \lhead{}
 \rhead{}
@@ -67,13 +57,8 @@ La mesure de différents niveaux par spectroscopie photoélectronique à rayons 
 \lfoot{}
 
 \noindent
-%*****************************************************
-%***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
-%*****************************************************
 \includegraphics[height=2.4cm]{/home/david/Documents/PhD/Figures/Logos/logo_usp_PIF.png}
 \vspace{0.5cm}
-%*****************************************************
-%\fontfamily{cmss}\fontseries{m}\selectfont
 
 \small
 
@@ -112,8 +97,6 @@ The measurement of different levels by X-ray photoelectron spectroscopy made it 
 
 \normalsize
 
-%************************************
-\vspace{\fill} % ALIGNER EN BAS DE PAGE
-%************************************
+\vspace{\fill}
 
 \newpage\thispagestyle{empty}\null\newpage
