--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -70,7 +70,7 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 \scriptsize
 \begin{tabular}{|p{10cm}l}
 \arrayrulecolor{Prune}
-\textbf{Sylvain RAVY} & Président \\
+\textbf{Sylvain RAVY} & Président du jury\\
 Directeur de recherche, LPS, Université Paris-Saclay & \\
 \textbf{Andreas STIERLE} & Rapporteur \& Examinateur \\
 Professeur, University of Hamburg / DESY & \\
