--- a/Sections/2eme_couverture.tex
+++ b/Sections/2eme_couverture.tex
@@ -33,16 +33,16 @@ Mesurer la structure de nanoparticules à l'échelle nanométrique permet de ré
 En complément des études d'imagerie par diffraction cohérente de rayons X en condition de Bragg sur des nanoparticules individuelles, l'étude d'un ensemble de nanoparticules est effectuée \textit{via} la diffraction des rayons X à incidence rasante.
 La diffraction cohérente de rayons X en condition de Bragg étant une technique récente, une organisation typique de la réduction et analyse des données est proposée.
 L'importance d'étudier plusieurs particules a été mise en perspective par l'étude comparative de deux particules durant l'oxydation de l'ammoniac à \qty{300}{\degreeCelsius} et \qty{400}{\degreeCelsius}, en fonction du rapport entre \ce{O_2} et \ce{NH3}.
-Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, une couverture de facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mésuré en dessous de 600°C par diffraction de surface.
+Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, des facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mésuré en dessous de \qty{600}{\degreeCelsius} par diffraction de surface.
 Une particule a montré une diminution/augmentation réversible de la déformation homogène lorsque l'ammoniac a été introduit/retiré du réacteur.
 L'apparition d'un défaut à \qty{400}{\degreeCelsius} est liée à une augmentation non réversible et importante de la déformation homogène lors de l'oxydation de l'ammoniac pour une seconde particule, qui continue d'augmenter en fonction du rapport entre ammoniac et oxygène.
 Cette évolution structurelle est clairement visible en 3D, avec des volumes de densité électronique de Bragg manquants.
-De plus, deux type de surfaces présente sur les nanoparticules (\{111\} et \{100\}) ont aussi été étudiée à l'aide de monocristaux par diffraction des rayons X en surface et spectroscopie photoélectronique par rayons X.
-De ce fait, la structure de surface ainsi que la présence d'espèces adsorbées peut être reliée à l'activité catalytique mesurée, permettant une meilleure compréhension du mécanisme de réaction.
+De plus, deux type de surfaces présente sur les nanoparticules (\{111\} et \{100\}) ont aussi été étudiées à l'aide de monocristaux par diffraction des rayons X en surface et spectroscopie photoélectronique par rayons X.
+De ce fait, la structure de surface ainsi que la présence d'espèces adsorbées peuveut être reliées à l'activité catalytique mesurée, permettant une meilleure compréhension du mécanisme de réaction.
 Différentes reconstructions de surfaces ont été mesurées sur le Pt(100) pendant la réaction, ce qui n'est pas le cas pour le Pt(111).
-La présence d'oxygène est liée à une importante rugosité, alors que la présence d'ammoniac à une baisse de celle-ci.
+La présence d'oxygène est liée à une importante rugosité de surface, alors que la présence d'ammoniac à une baisse de celle-ci.
 De plus, différentes oxydes, ainsi que des structures transitoires ont été identifiés sur les deux monocristaux.
-La mesure de différents niveaux par spectroscopie photoélectronique à rayons X a permis de lier une sélectivité accrue du Pt(100) vers NO par rapport au Pt(111) à une plus importante présence d'oxygène adsorbée sur la surface.
+La mesure de différents niveaux par spectroscopie photoélectronique à rayons X a permis de lier une sélectivité accrue du Pt(100) vers NO par rapport au Pt(111) avec une plus importante présence d'oxygène adsorbée sur la surface.
 \end{multicols}
 
 \end{mdframed}
@@ -88,7 +88,7 @@ This structural evolution is clearly visible in 3D, with missing Bragg electron 
 In addition, two types of surfaces present on the nanoparticles (\{111\} and \{100\}) were also studied using single crystals by surface X-ray diffraction and X-ray photoelectron spectroscopy.
 Therefore, the surface structure as well as the presence of adsorbed species can be linked to the measured catalytic activity, allowing a better understanding of the reaction mechanism.
 Different surface reconstructions were measured on Pt(100) during the reaction, which is not the case for Pt(111).
-The presence of oxygen is linked to significant roughness, while the presence of ammonia is linked to a reduction in roughness.
+The presence of oxygen is linked to significant surface roughness, while the presence of ammonia is linked to a reduction in roughness.
 Furthermore, different oxides, as well as transient structures, were identified on the two single crystals.
 The measurement of different levels by X-ray photoelectron spectroscopy made it possible to link an increased selectivity of Pt(100) towards NO compared to Pt(111) to a greater presence of oxygen adsorbed on the surface.
 \end{multicols}
