--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -174,18 +174,14 @@ Lowering the partial pressure of oxygen from \qty{80}{\milli\bar} to \qty{5}{\mi
 
 Co-existing domains with the same hexagonal lattice on top on the Pt(100) surface are revealed, with an in-plane lattice parameter equal to \qty{2.68}{\angstrom}, \qty{\approx 3.36}{\percent} lower than the distance between neighbouring Pt atoms on the Pt(100) surface (\qty{2.77}{\angstrom}).
 Second order peaks can also be seen at the borders of the reciprocal space in-plane map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$.
-%, \textit{i.e.} respectively in the [011] and [01$\bar{1}$] directions.
-The hexagonal structures can be described as follows: Pt(100)-p$\begin{pmatrix} 0.96 & 0.00\\ -0.48 & 0.83 \end{pmatrix}$.
-% , the closest superstructure is Pt(100)-(33x25).
+The hexagonal reconstructions can be described as follows: Pt(100)-p$\begin{pmatrix} 0.96 & 0.00\\ -0.48 & 0.83 \end{pmatrix}$.
 For simplicity, this structure will be named Pt(100)-Hex in the rest of this thesis.
-% A sketch describing the real space unit cell can be found in appendix \ref{fig:Pt100UnitCellsReconstruction}.
-% precursor to bulk is chemisorbed \parencite{BradleyShumbera2007}
 
-Different hexagonal surface structures on the Pt(100) surface have been reported in literature, in the same directions, and under ultra-high vacuum.
+Different hexagonal reconstructions on the Pt(100) surface have been reported in literature, in the same directions, and under ultra-high vacuum.
 This has been summarised by Hammer et al. \parencite*{Hammer2016}, based on an important body of work \parencite{Heilmann1979, Vanhove1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}.
-Hexagonal structures have been measured to evolve to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature, and the previous temperature treatment.
+Hexagonal reconstructions have been measured to evolve to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature, and the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt(100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a c(26x118) superstructure.
-Exposition of the rotated hexagonal structures to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) removes the hexagonal structures, and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}.
+Exposition to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) removes the hexagonal reconstructions, and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}.
 A similar conclusion was reached by \cite{Deskins2005} by DFT studies.
 Exposition to \ce{NO} has been reported to stabilise the clean Pt(100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction.
 An oscillatory behaviour between a clean Pt(100)-(1x1) surface and the rotated hexagonal reconstruction was reported by Cox et al. \parencite*{Cox1983} during CO oxidation.
@@ -209,7 +205,7 @@ The partial pressure of \ce{NO} and \ce{N_2O} decreases quickly after the change
     \label{fig:MapsPt100C}
 \end{figure}
 
-After removing oxygen from the reactor, only the first order reflections corresponding to the hexagonal structures could be detected during the measurement of the reciprocal space in-plane map (fig. \ref{fig:MapsPt100C} - a), the following measurement under Argon showed a clean Pt(100) surface (fig. \ref{fig:MapsPt100C} - b).
+After removing oxygen from the reactor, only the first order reflections corresponding to the hexagonal reconstruction could be detected during the measurement of the reciprocal space in-plane map (fig. \ref{fig:MapsPt100C} - a), the following measurement under Argon showed a clean Pt(100) surface (fig. \ref{fig:MapsPt100C} - b).
 
 \subsection{Oxide growth under 5 mbar of oxygen}
 
@@ -224,11 +220,11 @@ After removing oxygen from the reactor, only the first order reflections corresp
     \label{fig:MapsPt100D}
 \end{figure}
 
-To make sure that the hexagonal structures are related to the reaction conditions, and not only to a lower pressure of oxygen in the reactor, a partial pressure of \qty{5}{\milli\bar} of oxygen was set.
+To make sure that the hexagonal reconstruction are related to the reaction conditions, and not only to a lower pressure of oxygen in the reactor, a partial pressure of \qty{5}{\milli\bar} of oxygen was set.
 The following measurement showed the presence of many peaks that appeared in the first hour of the measurement (fig. \ref{fig:MapsPt100D} - a).
 A second map was measured directly after the end of the first map, in which none of the newly detected peaks could be observed (fig. \ref{fig:MapsPt100D} - b).
 
-These two measurements showed first that the hexagonal structures observed under reacting conditions when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} are linked to the \textit{simultaneous} presence of ammonia and oxygen in the reactor.
+These two measurements showed first that the hexagonal reconstructions observed under reacting conditions when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} are linked to the \textit{simultaneous} presence of ammonia and oxygen in the reactor.
 Secondly, the dynamics of some of the observed phenomena under \qty{5}{\milli\bar} of oxygen are too short to be effectively measured with the current time-resolution of in-plane reciprocal space maps.
 Weak signals in the H and K directions can be seen in the second map, starting from the (1, $\bar{1}$, 0) Bragg peak (fig. \ref{fig:MapsPt100D} - b).
 
@@ -335,10 +331,10 @@ The minimal intensity can be seen to decrease after introduction of oxygen, see 
 The following crystal truncation rods having been measured after the second introduction of ammonia in the cell, \textit{i.e.} after sample cleaning and short exposition to high oxygen atmosphere.
 The roughness under reacting conditions, when observing the Pt(100)-($10\times10$) reconstructions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia}), decreases only slightly in comparison to having only oxygen in the cell, and is still more important than under inert atmosphere.
 Lowering the amount of oxygen in the cell decreases the surface roughness, coming back to the initial value.
-In this condition, the hexagonal structures are observed (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+In this condition, the hexagonal reconstructions are observed (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
 
 The lowest roughness value is reached when only ammonia is present in the reactor, without oxygen.
-The hexagonal structures slowly disappear (fig. \ref{fig:MapsPt100C}), their presence linked to increased roughness on the sample surface.
+The hexagonal reconstructions slowly disappear (fig. \ref{fig:MapsPt100C}), their presence linked to increased roughness on the sample surface.
 Removing ammonia does not change the surface roughness, which shows that oxygen plays a key role in the increased surface roughness.
 
 Finally, the presence of \qty{5}{\milli\bar} of oxygen after the ammonia oxidation cycle increases the surface roughness to higher values, almost equal to the maximum value reached under the presence of \qty{80}{\milli\bar} of oxygen.
@@ -356,7 +352,7 @@ For example, when observing the [2, 0, L] CTR in fig. \ref{fig:CTRFit100}, the l
 However, the change in intensity indicates different surface roughness.
 The shape of the [0, $\bar{1}$, L] CTR when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} is interesting (fig. \ref{fig:CTRPt100}).
 The intensity minimum at $L=2.1$ is very low, whereas the decrease of intensity around the Bragg peaks is not very strong, in comparison with the same CTR but when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8}.
-It is possible that low intensity peaks are present near $L=1.8$ or $L=2.5$ that would explain this shape, linked to the hexagonal structures observed in fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}.
+It is possible that low intensity peaks are present near $L=1.8$ or $L=2.5$ that would explain this shape, linked to the hexagonal reconstructions observed in fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}.
 
 \subsection{Surface species}
 
