--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -56,8 +56,8 @@ The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5,
 
 %%%%%%%%%%%%%%%%%%%% o2/nh3=0.5 %%%%%%%%%%%%%%%%%%%%
 
-Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-($10\times10$) surface reconstructions, and induced the appearance of a hexagonal Pt(100)-Hex superstructure, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
-Removing oxygen from the reactor resulted in the progressive removal of the hexagonal structures (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reactants.
+Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-($10\times10$) surface reconstructions, and induced the appearance of a hexagonal Pt(100)-Hex reconstruction, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+Removing oxygen from the reactor resulted in the progressive removal of the hexagonal reconstruction (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reactants.
 Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the visible presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
 No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
 Therefore, the Pt(100)-($10\times10$) surface reconstruction can be linked to the presence of a surface oxide on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
@@ -84,7 +84,7 @@ The roughness on the Pt(111) surface decreases during ammonia oxidation (fig. \r
 Indeed, low roughness is already achieved when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - a).
 For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmosphere (fig. \ref{fig:CTRFit100} - a).
 However, the minimal roughness is only reached once oxygen is completely removed from the reactor, \textit{i.e.} after the oxidation cycle.
-The  Pt(100)-($10\times10$) surface reconstructions and Pt(100)-Hex hexagonal structures present on the Pt(100) surface during reacting conditions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), can be linked to the remaining high roughness, whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
+The  Pt(100)-($10\times10$) and Pt(100)-Hex reconstructions present on the Pt(100) surface during reacting conditions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), can be linked to the remaining high roughness, whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
 
 % surface strain
 A similar behaviour is observed for the out-of-plane lattice strain.
@@ -96,8 +96,8 @@ Overall, the strain measured in this experiment is more important on Pt(100) tha
 %%%%%%%%%%%%%%%%%%%% Pure nh3 %%%%%%%%%%%%%%%%%%%%
 
 Stopping the oxidation reaction by removing oxygen has finally resulted in the removal of surface structure on the Pt(100) surface (fig. \ref{fig:MapsPt100C} - a).
-If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal structures are still measured during the first hours of measurement.
-It is possible that this progressive removal of the hexagonal surface structure is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
+If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal reconstructions are still measured during the first hours of measurement.
+It is possible that this progressive removal of the hexagonal reconstructions is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
 The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b, difference of \qty{\approx 0.33}{\percent}).
 Atomic nitrogen is also observed in the N 1s level of Pt(111), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
 No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between the Pt(111)-($8\times8$) surface structure, and changes in the out-of-plane strain.
