--- a/Sections/0_Acknowledgements.tex
+++ b/Sections/0_Acknowledgements.tex
@@ -1,6 +1,6 @@
 I extend my deepest gratitude to Andrea for his unwavering support throughout the duration of this thesis.
 You have contaminated me with your love of Linux and open source technology, and set a strong example in terms of commuting to work by bicycle, which I failed to follow in rainy and cold days.
-Thank you very much for all the feedback that you gave me about this thesis, down to the details in the figure placement, fontsize, linewidth, and sentence length.
+Thank you very much for all the feedback that you gave me about this thesis, down to the details in the figure placement, font size, line width, and sentence length.
 Pursuing your interest in the study of the ammonia oxidation has allowed me to explore a large subject.
 This work has given me a missing sense of purpose, as it feels like my contribution is ever so slightly adding to the global endeavour in combating global warming and climate change.
 
@@ -18,7 +18,7 @@ I have learned an incredible amount from each of you and particularly appreciate
 I am very grateful to the research staff of SixS, to Alina and Yves for helping me when I was lost in the reciprocal space, to Benjamin without which none of the experiments could be possible, and to Michèle for her numerous advice.
 Thank you also Frédéric for spending a lot of time in helping us regarding BCDI and SXRD code development.
 Thank you to all the young researchers at SOLEIL for creating a group so that Saclay did not feel too remote and secluded.
-Thank you for the direction of SOLEIL who has supported my going to different conferences, abroad and in France, as well as for providing a good working environment.
+Thank you for the direction of SOLEIL who has supported my going to different conferences, abroad and in France, as well as for providing a superb working environment.
 
 I of course have a specific thought for the Grenoble legions, half of whom I don't know half as well as I should like, and half of whom I know from half my stay spent in beamtime.
 Maxime, for introducing me to the world of political satire videos during ammonia oxidation cycles at SixS; Corentin, for the delightful culinary explorations in Grenoble, and for lending me the ID01 bicycle; Clément, for your constant positivity and our conversations about the promising future of PhD students; Nikita and Mattia, for the shared moments over a refreshing beer and the intense MSSBB games during Hercules; Ewen, for representing Bretagne alongside me; Edoardo, for the initiative of LAN parties, and the unforgettable Quake games; and Noor, for being an exceptional office (and coffee) mate in Grenoble.
@@ -42,7 +42,7 @@ Thank you to all my friends that have seen me being projected in numerous states
 
 I extend my thanks to the esteemed members of the jury for their invaluable feedback and constructive critique, shaping the course of this work.
 
-Furthermore, I acknowledge the invaluable support and resources provided by synchrotron SOLEIL, the CEA, and the ERC Carine, without which this research endeavour would not have been feasible.
+Furthermore, I acknowledge the invaluable support and resources provided by synchrotron SOLEIL, the CEA Grenoble, and the ERC Carine, without which this research endeavour would not have been feasible.
 
 Lastly, I express my gratitude to all those who have, in various capacities, contributed to the completion of this thesis.
 
