--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -73,7 +73,7 @@ Another factor to take into account is the increased surface roughness linked to
 Additional high-resolution studies could contribute to understanding the effect of adsorbates on surface relaxation.
 
 The thesis demonstrates the importance of combining structural measurements at both the individual particle and particle assembly levels.
-With Bragg coherent diffraction imaging (BCDI), we have demonstrated that depending on the morphology (shape, size, facet type and coverage, \textit{etc.}) and initial strain state of the Pt particles, different structural evolutions are observed (in terms of strain, morphology, and defects) during the ammonia oxidation.
+With Bragg coherent diffraction imaging (BCDI), we have demonstrated that depending on the morphology (shape, size, facet type and coverage, \textit{etc.}) and initial strain state of the Pt particles, different structural evolution are observed (in terms of strain, morphology, and defects) during the ammonia oxidation.
 A better representation of the different behaviours followed by Pt particles during reaction, by measuring multiple individual particles, appears mandatory for a comprehensive understanding of the structure-activity relationship.
 It is noteworthy that the strain at the particle/support interface seems to exert a pronounced influence on the particle behaviour.
 Nanoparticles serve as a platform to explore the simultaneous structural evolution of diverse crystallographic facets at once.
