--- a/Sections/FrenchSummary.tex
+++ b/Sections/FrenchSummary.tex
@@ -1,4 +1,7 @@
 % chapter 1 / intro
+\begingroup
+\renewcommand{\tablename}{Tableau} % Redefine the table name to "Tableau"
+
 Dans le premier chapitre de cette thèse, l'oxydation de l'ammoniac (\ce{NH_3}) ainsi que son importance est présentée.
 La réaction peut être décrite par trois équations qui, en fonction du rapport stoechiométrique entre \ce{NH_3} et \ce{O_2}, ont des produits différents.
 
@@ -38,7 +41,7 @@ Le réacteur utilisé pour étudier la réaction catalytique hétérogène sur l
 
 Pour combler le fossé matériel, des nanoparticules et monocristaux de platine ont été utilisés.
 Tout au long de ce travail, de faibles rapports de pression partielle \ce{O_2}/\ce{NH_3} et des basses températures ont été liés à la sélectivité vers \ce{N_2}, alors que des rapports \ce{O_2}/\ce{NH_3} et températures élevés ont été liés à une sélectivité accrue vers \ce{NO} et \ce{N_2O}.
-Ceci est cohérent avec la sélectivité rapportée pour les catalyseurs industriels, qui soutient l'utilisation de nanoparticules et de monocristaux comme catalyseurs modèles pour améliorer la compréhension du système.
+Ceci est cohérent avec la sélectivité rapportée pour les catalyseurs industriels, ce qui soutient l'utilisation de nanoparticules et de monocristaux comme catalyseurs modèles pour améliorer la compréhension du système.
 
 Les éléments optiques nécessaires à l'utilisation d'un faisceau cohérent focalisé ont été implémentés et caractérisés.
 L'extension du panel de techniques disponibles contribuera à combler le fossé entre les matériaux et pressions utilisés en industrie par rapport à ceux utilisés en sciences de surfaces.
@@ -52,7 +55,7 @@ L'écart entre le matériau et la pression est partiellement comblé en fonction
 \resizebox{\textwidth}{!}{%
     \begin{tabular}{l|l|l|l}
         Technique    & Diffraction des rayons    & Diffraction cohérente & Spectroscopie photoélectronique \\
-                     & x en surface              & des rayons x en       & par rayons x              \\
+                     & X en surface              & des rayons X en       & par rayons X              \\
                      &                           & condition de Bragg    &                           \\
         \midrule
         Échantillons & Monocristaux de           & Particules de         & Monocristaux de           \\
@@ -115,7 +118,7 @@ De plus, les facettes \{111\} proches de l'interface évoluent entre des facette
 L'introduction d'ammoniac dans le réacteur à \qty{600}{\degreeCelsius} a entraîné une inversion de la déformation des facettes, probablement à l'origine de la création d'un réseau de dislocations interfaciales, mettant en évidence le lien entre facette et déformation interfaciale dans les nanoparticules.
 
 L'importance de la forme des particules, de la taille des facettes, de leur taux de couverture ainsi que de l'état de déformation initial a été mise en perspective par l'étude comparative de deux particules durant l'oxydation de l'ammoniac à \qty{300}{\degreeCelsius} et \qty{400}{\degreeCelsius}, en fonction du rapport entre \ce{O_2} et \ce{NH3}.
-Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, une couverture de facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mésuré en dessous de \qty{600}{\degreeCelsius} par diffraction de surface.
+Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, une couverture de facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mesuré en dessous de \qty{600}{\degreeCelsius} par diffraction de surface.
 La surface de la plus grande nanoparticule (particule \textit{C}, \qty{800}{\nm} de largeur) est constituée de facettes de type \{111\}, \{110\} et \{100\}.
 
 \begin{figure}[!htb]
@@ -126,7 +129,7 @@ La surface de la plus grande nanoparticule (particule \textit{C}, \qty{800}{\nm}
     \caption{
         Surface de la particule C reconstruite à \qty{300}{\degreeCelsius} sous atmosphère d'argon (inerte).
         La surface est colorée par les valeurs de la déformation hétérogène hors plan pour chaque voxel de surface, la limite de chaque facette est délimitée par d'épaisses lignes blanches.
-        Mesures effectuées en diffraction cohérente des rayons x.
+        Mesures effectuées en diffraction cohérente des rayons X.
     }
     \label{fig:D6FacetsFr}
 \end{figure}
@@ -135,7 +138,7 @@ La particule \textit{C} a montré une diminution/augmentation réversible de la 
 Une augmentation non réversible de la déformation hétérogène a été mesurée à \qty{300}{\degreeCelsius} lors de la première exposition de l'échantillon à des conditions de réaction (\ce{O_2}/\ce{NH_3} = 0,5), aucune augmentation de ce type n'a été reproduite aux mêmes conditions à \qty{400}{\degreeCelsius}.
 
 L'augmentation de déformation homogène liée à la présence/absence d'ammoniac n'a pas été reproduite sur la deuxième nanoparticule (particule \textit{B}, \qty{300}{\nm} de large).
-Contrairement à la particule précedente (\textit{C}), la particule \textit{B} à des facettes de type \{113\} également présentes à sa surface.
+Contrairement à la particule précédente (\textit{C}), la particule \textit{B} à des facettes de type \{113\} également présentes à sa surface.
 
 \begin{figure}[!htb]
     \centering
@@ -242,9 +245,11 @@ La thèse démontre l’importance de combiner les mesures de particules individ
 Par imagerie de diffraction cohérente de Bragg, nous avons démontré qu'en fonction de la morphologie (forme, taille, type de facette et couverture, \textit{etc.}) et de l'état de déformation initial des particules de Pt, différentes évolutions structurelles sont observées (en termes de déformation, de morphologie et de défauts) lors de l'oxydation de l'ammoniac.
 Une meilleure représentation des différents comportements suivis par les particules de platine au cours de la réaction, en mesurant plusieurs particules individuelles, semble indispensable pour une compréhension globale de la relation structure-activité.
 Il est à noter que la déformation à l’interface particule/support semble exercer une influence prononcée sur le comportement des particules.
-Les nanoparticules servent de plate-forme pour explorer simultanément l’évolution structurelle de diverses facettes cristallographiques, alors que les monocristaux permettent de mieux isoler les comportements des facettes uniques sur les nanoparticules.
+Les nanoparticules servent de plate-forme pour explorer simultanément l’évolution structurelle de diverses facettes crystallographiques, alors que les monocristaux permettent de mieux isoler les comportements des facettes uniques sur les nanoparticules.
 
-En conclusion, l'utilisation de trois techniques de rayons x différentes a permis de mieux appréhender les mécanismes à l'oeuvre lors de l'oxydation de l'ammoniac.
+En conclusion, l'utilisation de trois techniques de rayons X différentes a permis de mieux appréhender les mécanismes à l'oeuvre lors de l'oxydation de l'ammoniac.
+
+\endgroup % End of the group
 
 %************************************
 \vspace{\fill} % ALIGNER EN BAS DE PAGE
