--- a/Sections/2eme_couverture.tex
+++ b/Sections/2eme_couverture.tex
@@ -24,21 +24,22 @@
 \noindent \textbf{Résumé:}
 
 Le principal objectif de ce travail est d'étudier des catalyseurs hétérogènes \textit{in situ} et \textit{operando} pendant l'oxydation de l'ammoniac en se rapprochant des valeurs de température et pression industrielles.
-Actuellement, ce processus catalytique et les changements structurels associés sont mal compris, et nous proposons d'utiliser différents échantillons en platine, nanoparticules et monocristaux afin de réduire l'écart entre les études scientifiques sur échantillons modèles et les catalyseurs utilisés en industrie.
+Actuellement, ce processus catalytique et les changements structurels associés sont mal compris.
+Nous proposons d'utiliser différents échantillons en platine - nanoparticules et monocristaux - afin de réduire l'écart entre les études scientifiques sur échantillons modèles et les catalyseurs utilisés en industrie.
 L'activité catalytique des différents échantillons est mesurée pour lier structure et sélectivité durant la réaction, qui peut être focalisée vers la production d'azote (\ce{N_2}), d'oxyde nitrique (\ce{NO}), ou de protoxyde d'azote (\ce{N_2O}).
-Le développement d'une catalyse hétérogène avec une sélectivité ciblant les \qty{100}{\percent} est un défi constant, ainsi que la compréhension de la durabilité, du vieillissement et de la désactivation du catalyseur.
+Le développement d'une catalyse hétérogène avec une sélectivité ciblant les \qty{100}{\percent} est un défi constant, ainsi que la compréhension de la durabilité, du vieillissement, et de la désactivation du catalyseur.
 Trois techniques ont été principalement utilisées, l'imagerie par diffraction cohérente de Bragg, la diffraction des rayons X de surface et la spectroscopie photoélectronique des rayons X, combinées à des mesures par spectrométrie de masse.
-Ces techniques sont compatibles avec des conditions de pression proches des conditions expérimentales, permettant de réduire l'écart de pression en catalyse hétérogène.
+Ces techniques sont compatibles avec des conditions de pression ambiantes, permettant de réduire l'écart de pression entre expérience et industrie en catalyse hétérogène.
 Mesurer la structure de nanoparticules à l'échelle nanométrique permet de révéler les effets de volume, de tension et de compression de surface et d'interface, ainsi que l'existence de différents types de défauts.
 En complément des études d'imagerie par diffraction cohérente de rayons X en condition de Bragg sur des nanoparticules individuelles, l'étude d'un ensemble de nanoparticules est effectuée \textit{via} la diffraction des rayons X à incidence rasante.
-La diffraction cohérente de rayons X en condition de Bragg étant une technique récente, une organisation typique de la réduction et analyse des données est proposée.
+La diffraction cohérente de rayons X en condition de Bragg étant une technique récente, une organisation typique de la réduction et de l'analyse des données est proposée.
 L'importance d'étudier plusieurs particules a été mise en perspective par l'étude comparative de deux particules durant l'oxydation de l'ammoniac à \qty{300}{\degreeCelsius} et \qty{400}{\degreeCelsius}, en fonction du rapport entre \ce{O_2} et \ce{NH3}.
-Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, des facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mésuré en dessous de \qty{600}{\degreeCelsius} par diffraction de surface.
+Différents comportements ont été révélés sur les deux nanoparticules, qui présentent une taille, une forme, des facettes et un état de déformation initial différents, alors qu'aucun important changement n'a été mesuré en dessous de \qty{600}{\degreeCelsius} par diffraction de surface.
 Une particule a montré une diminution/augmentation réversible de la déformation homogène lorsque l'ammoniac a été introduit/retiré du réacteur.
-L'apparition d'un défaut à \qty{400}{\degreeCelsius} est liée à une augmentation non réversible et importante de la déformation homogène lors de l'oxydation de l'ammoniac pour une seconde particule, qui continue d'augmenter en fonction du rapport entre ammoniac et oxygène.
+L'apparition d'un défaut à \qty{400}{\degreeCelsius} est liée à une augmentation non réversible et importante de la déformation homogène lors de l'oxydation de l'ammoniac pour la seconde particule, qui continue d'augmenter en fonction du rapport entre ammoniac et oxygène.
 Cette évolution structurelle est clairement visible en 3D, avec des volumes de densité électronique de Bragg manquants.
-De plus, deux type de surfaces présente sur les nanoparticules (\{111\} et \{100\}) ont aussi été étudiées à l'aide de monocristaux par diffraction des rayons X en surface et spectroscopie photoélectronique par rayons X.
-De ce fait, la structure de surface ainsi que la présence d'espèces adsorbées peuveut être reliées à l'activité catalytique mesurée, permettant une meilleure compréhension du mécanisme de réaction.
+De plus, deux type de surfaces présente sur les nanoparticules (\{111\} et \{100\}) ont été étudiées à l'aide de monocristaux par diffraction des rayons X en surface, et spectroscopie photoélectronique par rayons X.
+De ce fait, la structure de surface ainsi que la présence d'espèces adsorbées peuvent être reliées à l'activité catalytique mesurée, permettant une meilleure compréhension du mécanisme de réaction.
 Différentes reconstructions de surfaces ont été mesurées sur le Pt(100) pendant la réaction, ce qui n'est pas le cas pour le Pt(111).
 La présence d'oxygène est liée à une importante rugosité de surface, alors que la présence d'ammoniac à une baisse de celle-ci.
 De plus, différentes oxydes, ainsi que des structures transitoires ont été identifiés sur les deux monocristaux.
@@ -74,14 +75,14 @@ La mesure de différents niveaux par spectroscopie photoélectronique à rayons 
 The main objective of this work is to study heterogeneous catalysts \textit{in situ} and \textit{operando} during the oxidation of ammonia by approaching industrial temperature and pressure values.
 Currently, this catalytic process and the associated structural changes are poorly understood, and we propose to use different samples in platinum, nanoparticles and single crystals in order to reduce the gap between scientific studies on model samples and catalysts used in industry.
 The catalytic activity of the different samples is measured to link structure and selectivity during the reaction, which can be focused towards the production of nitrogen (\ce{N2}), nitric oxide (\ce{NO}), or nitrous oxide (\ce{N2O}).
-Developing heterogeneous catalysis with selectivity targeting \qty{100}{\percent} is an ongoing challenge, as is understanding the durability, aging, and deactivation of the catalyst itself.
+Developing heterogeneous catalysis with selectivity targeting \qty{100}{\percent} is an ongoing challenge, as is understanding the durability, ageing, and deactivation of the catalyst itself.
 Three techniques were mainly used, Bragg coherent diffraction imaging, surface X-ray diffraction and X-ray photoelectron spectroscopy, combined with mass spectrometry measurements.
-These techniques are compatible with pressure conditions close to experimental conditions, making it possible to reduce the pressure difference in heterogeneous catalysis.
+These techniques are compatible with ambient pressure, making it possible to reduce the difference in pressure between surface science studies and industrial conditions for heterogeneous catalysis.
 Measuring the structure of nanoparticles at the nanoscale makes it possible to reveal the effects of volume, surface and interface tension and compression, as well as the existence of different types of defects.
 In addition to imaging studies by coherent X-ray diffraction in Bragg conditions on individual nanoparticles, the study of a set of nanoparticles is carried out \textit{via} grazing incidence X-ray diffraction.
-Coherent X-ray diffraction in Bragg conditions being a recent technique, a typical organization of data reduction and analysis is proposed.
+Coherent X-ray diffraction in Bragg conditions being a recent technique, a typical organisation of data reduction and analysis is proposed.
 The importance of studying several particles was put into perspective by the comparative study of two particles during the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the pressure ratio between \ce{O2} and \ce{NH3}.
-Different behaviors were revealed on the two nanoparticles, which present a different size, shape, facet coverage and initial deformation state, while no significant changes were measured below \qty{600}{\degreeCelsius} by diffraction of surface.
+Different behaviours were revealed on the two nanoparticles, which present a different size, shape, facet coverage and initial deformation state, while no significant changes were measured below \qty{600}{\degreeCelsius} by diffraction of surface.
 One particle showed a reversible decrease/increase in homogeneous strain when ammonia was introduced/removed from the reactor.
 The appearance of a defect at \qty{400}{\degreeCelsius} is linked to a non-reversible and significant increase in the homogeneous deformation during the oxidation of ammonia for a second particle, which continues to increase as a function of the ratio between ammonia and oxygen.
 This structural evolution is clearly visible in 3D, with missing Bragg electron density volumes.
